fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,6 +158,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     background-color: #fff;
     border-radius: 2px;
+    z-index: 1;
     display: none;
 }
 
